samples/_failures_safe/1761337218_da987b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d22cccf6.c: In function ‘main’:
./samples/SAFE/__tmp_d22cccf6.c:143:5: error: expected declaration or statement at end of input
  143 |     time_t earliest = 0, latest = 0;
      |     ^~~~~~
